# blursed

./: .gitignore  CMakeLists.txt  README.md  ReleaseNotes.md  build.sh  clean.sh
.github/workflows/: cmake.yml
design/: design_notes.md  textpager.md
src/: CMakeLists.txt  buffer.c  buffer.h  insertMode.c  main.c  textpager.c  textpager.h
src/editorMode/: CMakeLists.txt  commandMode.c  editorModes.h  insertMode.c  normalMode.c
src/list/: CMakeLists.txt  dictionary.c  dictionary.h  linkedlist.c  linkedlist.h
src/state/: CMakeLists.txt  editorState.c  editorState.h
test/: CMakeLists.txt  dictionary_test.c  editorStateTests.c  linkedlist_test.c  textpager_tests.c
test/cmocka/: License_for_cmocka_example
